crates/codegen/language/tests/src/fail/references/enabled_too_early/test.stderr
error: Parent scope is only enabled in '2.0.0..3.0.0'.
  --> src/fail/references/enabled_too_early/test.rs:28:81
   |
28 |                         (field_1 = Optional(kind = Terminal([Three]), enabled = From("1.0.0")))
   |                                                                                 ^^^^
